# xilinx-pcie-basics

./: AI_PERF_EXPLANATION.md  README.md  STORY.md
hw/vivado/: .gitignore  00_blank_pcie.xpr
hw/vivado/00_blank_pcie.srcs/const_1/new/: pins.xdc
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/: top.bd  top.bda
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ip/top_axi_bram_ctrl_0_0/: top_axi_bram_ctrl_0_0.xci
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ip/top_axi_bram_ctrl_0_2/: top_axi_bram_ctrl_0_2.xci
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ip/top_axi_smc_0/: top_axi_smc_0.xci
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ip/top_blk_mem_gen_0_0/: top_blk_mem_gen_0_0.xci
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ip/top_blk_mem_gen_0_2/: top_blk_mem_gen_0_2.xci
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ip/top_c_counter_binary_0_0/: top_c_counter_binary_0_0.xci
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ip/top_system_ila_0_0/: top_system_ila_0_0.xci
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ip/top_util_ds_buf_0/: top_util_ds_buf_0.xci
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ip/top_xdma_0_0/: top_xdma_0_0.xci
hw/vivado/00_blank_pcie.srcs/sources_1/bd/top/ui/: bd_2ae56375.ui
hw/vivado/00_blank_pcie.srcs/sources_1/mem/: blk_mem.coe
sw/: vfio_test.c
sw/ai-generated/: AI_GENERATED.md  Cargo.toml  README.md  setup_vfio.py
sw/ai-generated/src/: device.rs  lib.rs  main.rs
sw/vfio-benchmark/: .gitignore  Cargo.toml
sw/vfio-benchmark/src/: main.rs
